# bluegrid-devops-task

./: .dockerignore  .gitignore  .hadolint.yaml  CHAOS.md  COSTS.md  Dockerfile  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  terraform.yml
app/: pom.xml
app/src/main/resources/: application.properties
docs/: SEGMENT_B.md
evidence/: 10-terraform-plan.txt  11-terraform-apply.txt  12-terraform-outputs.txt  20-ssm-deploy.json  21-external-smoke.txt  22-sg-rules.json  23-instance.json  24-docker-ps.txt  25-docker-hardening.json  26-deploy-user.txt  27-sshd-hardening.conf  28-host-services.txt  29-listening-ports.txt  30-userdata-tail.txt  31-dockerd.json  32-iam-role.json  33-role-policies.json  34-role-policy-doc.json  40-image-meta.txt  41-manifest.json  42-digest.txt  43-cosign-verify.txt  44-cosign-attestation.txt  45-trivy-critical.txt  README.md
infra/: data.tf  iam_oidc.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  tfplan  userdata.sh.tftpl  variables.tf  versions.tf
monitor/: .gitignore  README.md  install.sh  pyproject.toml
monitor/.github/workflows/: ci.yml
monitor/src/gs_rest_monitor/: __main__.py  monitor.py
monitor/systemd/: gs-rest-monitor.env.example  gs-rest-monitor.service
monitor/tests/: test_monitor.py
scripts/: deploy.sh  prove-trivy-gate.sh
