[project]
name = "gs-rest-monitor"
version = "0.1.0"
description = "Availability monitor for gs-rest-service"
requires-python = ">=3.13"
dependencies = []           # stdlib-only runtime

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.11",
]

[project.scripts]
gs-rest-monitor = "gs_rest_monitor.monitor:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "B", "UP", "S", "SIM", "PT"]
ignore = [
    "S310",  # deliberate outbound HTTP
    "S311",  # random.uniform is for jitter, not crypto
    "BLE001",# broad except is intentional (never crash the probe)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
